--- a/_config.yml
+++ b/_config.yml
@@ -159,7 +159,7 @@ title-separator: "-"
 timezone: "Europe/Berlin"
 markdown: kramdown
 highlighter: rouge
-permalink: /:year-:month-:day-:title/
+#permalink: /:year-:month-:day-:title/
 paginate: 7
 
 kramdown:
