--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: pzagoris-notebook
 
 # Short description of your site
-description: A virtual proof that Panagos is awesome!
+description: A digital diary
 
 # --- Navigation bar options --- #
 
