--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: pzagoris.io
 
 # Short description of your site
-description: A digital diary
+description: A digital notebook
 
 # --- Navigation bar options --- #
 
